apps/personal-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-site
  namespace: personal-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-site
  template:
    metadata:
      labels:
        app: personal-site
    spec:
      containers:
        - name: personal-site
          image: git.tailf95ba8.ts.net/nabelops/folio:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 4000
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
