apps/personal-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-site-service
  namespace: personal-site
spec:
  selector:
    app: personal-site
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
