apps/personal-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-site
  namespace: personal-site
  annotations:
    tailscale.com/hostname: folio
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - folio
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-site-service
                port:
                  number: 80
